# tse-hp-front

./: .gitignore  CLAUDE.md  README.md  TSE_SEARCH_SERVICE_REPORT.md  context7.json  pyproject.toml
src/tse_hp_front/: __init__.py  client.py  models.py  parsers.py
tests/: realworld_test.py  stress_test.py
